--- a/src/main/java/setup/global.properties
+++ b/src/main/java/setup/global.properties
@@ -1,1 +1,5 @@
 webURL=http://the-internet.herokuapp.com/
+userName=tomsmith
+passWord=SuperSecretPassword!
+userName1=wrongUserName
+passWord1=wrongPassword
