--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,28 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 	</properties>
 
+	<profiles>
+		<profile>
+			<id>Smoke</id>
+			<build>			
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.0.0-M4</version>
+							<configuration>
+								<suiteXmlFiles>
+									<suiteXmlFile>testng.xml</suiteXmlFile>
+								</suiteXmlFiles>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
+	</profiles>
+	
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
