--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,25 @@
 				</pluginManagement>
 			</build>
 		</profile>
+		<profile>
+			<id>Cucumber</id>
+			<build>			
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-surefire-plugin</artifactId>
+							<version>3.0.0-M4</version>
+							<configuration>
+								<suiteXmlFiles>
+									<suiteXmlFile>testngCucumber.xml</suiteXmlFile>
+								</suiteXmlFiles>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
+			</build>
+		</profile>
 	</profiles>
 	
 	<dependencies>
